--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "peaceland",
   "version": "0.1.0",
-  "homepage": "https://github.com/Sanja-y/Peaceland.git",
+  "homepage": ".",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
